--- a/相向双指针.md
+++ b/相向双指针.md
@@ -26,3 +26,97 @@ class Solution {
     }
 }
 ```
+
+## [2.三数之和](https://leetcode.cn/problems/3sum/description/)
+思路：先排序，然后定义三个指针i，left和right，外层循环指针i从0遍历到倒数第三个位置（留两个位置给相向指针left和right），指针l从i+1开始，指针r从最右边开始。（如果题目要求结果不能重复，则三个指针都只指向第一个重复元素，绕过后续重复元素）
+代码：
+```
+class Solution {
+    public List<List<Integer>> threeSum(int[] nums) {
+        List<List<Integer>> ans = new ArrayList<>();
+
+        Arrays.sort(nums);
+        for(int i = 0; i < nums.length-2; i++)
+        {
+            if(i > 0 && nums[i] == nums[i-1])    
+            {
+                continue;
+            }
+            int target = 0 - nums[i];
+            int l = i+1;
+            int r = nums.length-1;
+            while(l < r)
+            {
+                if(nums[l] + nums[r] == target)
+                {
+                    ans.add(new ArrayList(Arrays.asList(nums[i], nums[l], nums[r])));
+                    l++;
+                    while(l < r && nums[l-1] == nums[l])
+                        l++;
+                    r--;
+                    while(l < r && nums[r] == nums[r+1])
+                        r--;
+                }
+                else if(nums[l] + nums[r] < target)
+                    l++;
+                else
+                    r--;
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## [3.四数之和](https://leetcode.cn/problems/4sum/description/)
+思路：多加一个外层指针，其他三个指针操作和三数之和一样。
+代码：
+```
+class Solution {
+    public List<List<Integer>> fourSum(int[] nums, int target) {
+        List<List<Integer>> ans = new ArrayList<>();
+        Arrays.sort(nums);
+        for(int i = 0; i < nums.length - 3; i++)
+        {
+            if(i > 0 && nums[i] == nums[i-1])
+                continue;
+            for(int j = i+1; j < nums.length - 2; j++)
+            {
+                if(j > i+1 && nums[j] == nums[j-1])
+                    continue;
+                int l = j+1;
+                int r = nums.length - 1;
+
+                long t = target - (long)nums[i] - (long)nums[j];
+                while(l < r)
+                {
+                    if(nums[l] + nums[r] == t)
+                    {
+                        List<Integer> ls = new ArrayList<>();
+                        ls.add(nums[i]);
+                        ls.add(nums[j]);
+                        ls.add(nums[l]);
+                        ls.add(nums[r]);
+                        ans.add(ls);
+                        l++;
+                        while(l < r && nums[l] == nums[l-1])
+                            l++;
+                        r--;
+                        while(l < r && nums[r] == nums[r+1])
+                            r--;
+                    }
+                    else if(nums[l] + nums[r] < t)
+                    {
+                        l++;
+                    }
+                    else
+                    {
+                        r--;
+                    }
+                }
+            }
+        }
+        return ans;
+    }
+}
+```
