--- a/相向双指针.md
+++ b/相向双指针.md
@@ -28,7 +28,7 @@ class Solution {
 ```
 
 ## [2.三数之和](https://leetcode.cn/problems/3sum/description/)
-思路：先排序，然后定义三个指针i，left和right，外层循环指针i从0遍历到倒数第三个位置（留两个位置给相向指针left和right），指针l从i+1开始，指针r从最右边开始。（如果题目要求结果不能重复，则三个指针都只指向第一个重复元素，绕过后续重复元素）  
+思路：先排序，然后定义三个指针i，left和right，外层循环指针i从0遍历到倒数第三个位置（留两个位置给相向指针left和right），指针left从i+1开始，指针right从最右边开始。（如果题目要求结果不能重复，则三个指针都只指向第一个重复元素，绕过后续重复元素）  
 代码：
 ```
 class Solution {
@@ -120,3 +120,6 @@ class Solution {
     }
 }
 ```
+
+### 心得和阶段性总结
+上述是一些常规的相向双指针题目。对于三指针的应用，一些题目的解法可能需要指针i指向较大值的下标，即外层循环指针i从最右边向前遍历到第三个元素下标，这样可以便于理解，需要依据题目具体分析。下面是一些特殊的相向双指针题目。
