--- a/相向双指针.md
+++ b/相向双指针.md
@@ -123,3 +123,62 @@ class Solution {
 
 ### 心得和阶段性总结
 上述是一些常规的相向双指针题目。对于三指针的应用，一些题目的解法可能需要指针i指向较大值的下标，即外层循环指针i从最右边向前遍历到第三个元素下标，这样可以便于理解，需要依据题目具体分析。下面是一些特殊的相向双指针题目。
+
+## [4.盛最多水的容器](https://leetcode.cn/problems/container-with-most-water/description/)
+思路：定义两个指针left和right，left从最左边开始，right从最右边开始，每次移动最矮的那条边（因为移动最矮边才可能在中间找到最优解），并记录储存的最大水量。  
+代码：
+```
+class Solution {
+    public int maxArea(int[] height) {
+        int ans = 0;
+        int l = 0;
+        int r = height.length - 1;
+        while(l < r)
+        {
+            int t = Math.min(height[l], height[r]) * (r - l);
+            if(t > ans)
+                ans = t;
+            if(height[l] < height[r])
+                l++;
+            else
+                r--;
+        }
+        return ans;
+    }
+}
+```
+
+## [5.接雨水](https://leetcode.cn/problems/trapping-rain-water/description/)
+思路：定义两个数组，前缀数组记录从左边到下标i的最大高度，后缀数组记录从右边到下标i的最大高度，有了这两个数组就可以计算各个下标i的盛水单位量。  
+代码：
+```
+class Solution {
+    public int trap(int[] height) {
+        int[] lmax = new int[height.length];
+        int[] rmax = new int[height.length];
+
+        for(int i = 0; i < height.length; i++)
+        {
+            if(i == 0)
+                lmax[i] = height[i];
+            else
+                lmax[i] = Math.max(lmax[i-1], height[i]);
+        }   
+
+        for(int i = height.length-1; i >= 0; i--)
+        {
+            if(i == height.length-1)
+                rmax[i] = height[i];
+            else
+                rmax[i] = Math.max(rmax[i+1], height[i]);
+        }
+
+        int ans = 0;
+        for(int i = 0; i < height.length; i++)
+        {
+            ans += Math.min(lmax[i], rmax[i]) - height[i];
+        }
+        return ans;
+    }
+}
+```
