--- a/相向双指针.md
+++ b/相向双指针.md
@@ -182,3 +182,8 @@ class Solution {
     }
 }
 ```
+
+### 知识点
+假设数组名为nums  
+- int[]类型:排序用Arrays.sort(nums)，求长度用nums.length，访问用nums[i].
+- List类型:初始化为用List nums = new ArrayList<>()，排序用Colections.sort(nums)，求长度用nums.size()，访问用nums.get(0)，添加用nums.add(num).
