--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -1,1 +1,35 @@
+# 代表性题目
+## [1.长度最小的子数组](https://leetcode.cn/problems/minimum-size-subarray-sum/description/)
+思路：定义两个指针，分别代表滑动窗口的左右指针，初始值都为0。外层while循环，右指针从左到右遍历，内层循环则根据控制条件，左指针向右便遍历。  
+代码：
+```
+class Solution {
+    public int minSubArrayLen(int target, int[] nums) {
+        int l = 0;
+        int r = 0;
+        int minl = nums.length + 1;
+        int sum = 0;
+        while(r < nums.length)
+        {
+            sum += nums[r];
+            while(sum >= target)
+            {
+                minl = Math.min(minl, r-l+1);
+                sum -= nums[l];
+                l++;
+            }
+            r++;
+        }
+        if(minl > nums.length)
+            return 0;
+        else
+            return minl;
+    }
+}
+```
 
+## []()
+思路：  
+代码：
+```
+```
