--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -69,3 +69,29 @@ class Solution {
     }
 }
 ```
+
+## [3.乘积小于 K 的子数组](https://leetcode.cn/problems/subarray-product-less-than-k/description/)
+思路：套用滑动窗口模板  
+代码：
+```
+class Solution {
+    public int numSubarrayProductLessThanK(int[] nums, int k) {
+        int l = 0;
+        int r = 0;
+        int mul = 1;
+        int ans = 0;
+        while(r < nums.length)
+        {
+            mul *= nums[r];
+            while(l <= r && mul >= k)
+            {
+                mul /= nums[l];
+                l++;
+            }
+            ans += (r - l  +1);
+            r++;
+        }
+        return ans;
+    }
+}
+```
