--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -70,6 +70,9 @@ class Solution {
 }
 ```
 
+### 注意事项
+涉及到HashSet的使用，方法和ArrayList类似。
+
 ## [3.乘积小于 K 的子数组](https://leetcode.cn/problems/subarray-product-less-than-k/description/)
 思路：套用滑动窗口模板  
 代码：
