--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -100,3 +100,29 @@ class Solution {
     }
 }
 ```
+
+## [4.最多 K 个重复元素的最长子数组]([https://leetcode.cn/problems/subarray-product-less-than-k/description/](https://leetcode.cn/problems/length-of-longest-subarray-with-at-most-k-frequency/description/))
+思路：套用滑动窗口模板  
+代码：
+```
+class Solution {
+    public int maxSubarrayLength(int[] nums, int k) {
+        Map<Integer, Integer> mp = new HashMap<>();
+        int l = 0;
+        int r = 0;
+        int maxl = 0;
+        while(r < nums.length)
+        {
+            mp.merge(nums[r], 1, Integer::sum);
+            while(l <= r && mp.get(nums[r]) > k)
+            {
+                mp.merge(nums[l], -1, Integer::sum);
+                l++;
+            }
+            maxl = Math.max(maxl, r-l+1);
+            r++;
+        }
+        return maxl;
+    }
+}
+```
