--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -101,7 +101,7 @@ class Solution {
 }
 ```
 
-## [4.最多 K 个重复元素的最长子数组](https://leetcode.cn/problems/subarray-product-less-than-k/description/](https://leetcode.cn/problems/length-of-longest-subarray-with-at-most-k-frequency/description/)
+## [4.最多 K 个重复元素的最长子数组](https://leetcode.cn/problems/length-of-longest-subarray-with-at-most-k-frequency/description/)
 思路：套用滑动窗口模板  
 代码：
 ```
