--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -126,3 +126,31 @@ class Solution {
     }
 }
 ```
+
+## [5.找到最长的半重复子字符串](https://leetcode.cn/problems/find-the-longest-semi-repetitive-substring/description/)
+思路：套用滑动窗口模板  
+代码：
+```
+class Solution {
+    public int longestSemiRepetitiveSubstring(String s) {
+        int l = 0;
+        int r = 0;
+        int ans = 0;
+        int same = 0;
+        while(r < s.length())
+        {
+            if(r - l > 0 && s.charAt(r) == s.charAt(r-1)) //r-l>0 用于判断字符串长度大于1
+                same++;
+            while(l <= r && same > 1) //存在两对相等的相邻字符
+            {
+                if(s.charAt(l) == s.charAt(l+1)) //删掉左边那一对就行
+                    same--;
+                l++;
+            }
+            ans = Math.max(ans, r-l+1);
+            r++;
+        }
+        return ans;
+    }
+}
+```
