--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -154,3 +154,27 @@ class Solution {
     }
 }
 ```
+
+## [6.数组的最大美丽值](https://leetcode.cn/problems/maximum-beauty-of-an-array-after-applying-operation/description/)
+思路：排序 + 滑动窗口  
+代码：
+```
+class Solution {
+    public int maximumBeauty(int[] nums, int k) {
+        Arrays.sort(nums);
+        int l = 0;
+        int r = 0;
+        int maxl = 0;
+        while(r < nums.length)
+        {
+            while(l <= r && nums[r] - nums[l] > 2 * k)
+            {
+                l++;
+            }
+            maxl = Math.max(maxl, r-l+1);
+            r++;
+        }
+        return maxl;
+    }
+}
+```
