--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -178,3 +178,31 @@ class Solution {
     }
 }
 ```
+
+## [7.最大连续 1 的个数 III](https://leetcode.cn/problems/max-consecutive-ones-iii/description/)
+思路：滑动窗口表示符合条件的翻转0后的连续1数组，变量num0记录滑动窗口内0的个数，需要确保num0 <= k.  
+代码：
+```
+class Solution {
+    public int longestOnes(int[] nums, int k) {
+        int num0 = 0;
+        int l = 0;
+        int r = 0;
+        int maxl = 0;
+        while(r < nums.length)
+        {
+            if(nums[r] == 0)
+                num0++;
+            while(l <= r && num0 > k)
+            {
+                if(nums[l] == 0)
+                    num0--;
+                l++;
+            }
+            maxl = Math.max(maxl, r-l+1);
+            r++;
+        }
+        return maxl;
+    }
+}
+```
