--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -206,3 +206,36 @@ class Solution {
     }
 }
 ```
+
+## [8.统计最大元素出现至少 K 次的子数组](https://leetcode.cn/problems/count-subarrays-where-max-element-appears-at-least-k-times/description/)
+思路：滑动窗口找到满足条件的区间，左指针向右遍历直到区间刚好不满足条件，则答案总数ans += left，右指针继续扩展。  
+代码：
+```
+class Solution {
+    public long countSubarrays(int[] nums, int k) {
+        int max = 0;
+        for(int i = 0; i < nums.length; i++)
+        {
+            max = Math.max(nums[i], max);
+        }
+        int l = 0;
+        int r = 0;
+        long ans = 0;
+        int numMax = 0;
+        while(r < nums.length)
+        {
+            if(nums[r] == max)
+                numMax++;
+            while(l <= r && numMax >= k)
+            {
+                if(nums[l] == max)
+                    numMax--;
+                l++;
+            }
+            ans += l;
+            r++;
+        }
+        return ans;
+    }
+}
+```
