--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -14,6 +14,10 @@ while(end < n){ //外层循环扩展右边界，内层循环扩展左边界
 }
 ```
 
+###滑动窗口使用前提：  
+1. 连续子数组。
+2. 有单调性。比如元素均为正数。
+
 ### 注意事项
 1. 整形无穷大用Integer.MAX_VALUE，类似的无穷小为Integer.MIN_VALUE  
 2. 采用集合Set<Character> set = new HashSet<Character>()来记录是否出现过，add()添加，remove()去除，contains()用于判断是否存在
