--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -243,3 +243,42 @@ class Solution {
     }
 }
 ```
+
+## [9.将 x 减到 0 的最小操作数](https://leetcode.cn/problems/minimum-operations-to-reduce-x-to-zero/description/)
+思路：滑动窗口 + 反向思维，找到和等于target的最长连续子数组。  
+代码：
+```
+class Solution {
+    public int minOperations(int[] nums, int x) {
+        int sum = 0;
+        for(int i = 0; i < nums.length; i++)
+        {
+            sum += nums[i];
+        }
+        //反向思维，找到和等于target的最长连续子数组
+        int target = sum - x;
+        if(target == 0)
+            return nums.length;
+        int l = 0;
+        int r = 0;
+        int maxl = 0;
+        sum = 0;
+        while(r < nums.length)
+        {
+            sum += nums[r];
+            while(l <= r && sum > target)
+            {
+                sum -= nums[l];
+                l++;
+            }
+            if(sum == target)
+                maxl = Math.max(maxl, r-l+1);
+            r++;
+        }
+        if (maxl < 1)
+            return -1;
+        else
+            return nums.length - maxl;
+    }
+}
+```
