--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -282,3 +282,40 @@ class Solution {
     }
 }
 ```
+
+## [10.替换子串得到平衡字符串](https://leetcode.cn/problems/replace-the-substring-for-balanced-string/description/)
+思路：滑动窗口 + 反向思维，如果在待替换子串之外的任意字符的出现次数都不超过 n/4，那么可以通过替换，使 s 为平衡字符串，即每个字符的出现次数均为 n/4。  
+代码：
+```
+class Solution {
+    public int balancedString(String s) {
+        int n = s.length();
+        Map<Character, Integer> mp = new HashMap<>(); //用数组会快很多
+        mp.put('Q', 0);
+        mp.put('W', 0);
+        mp.put('E', 0);
+        mp.put('R', 0);
+        for(int i = 0; i < n; i++)
+        {
+            mp.merge(s.charAt(i), 1, Integer::sum);
+        }
+        if(mp.get('Q') == n/4 && mp.get('W') == n/4 && mp.get('E') == n/4 && mp.get('R') == n/4)
+            return 0;
+        int l = 0;
+        int r = 0;
+        int minl = Integer.MAX_VALUE;
+        while(r < n)
+        {
+            mp.merge(s.charAt(r), -1, Integer::sum);
+            while(l <= r && mp.get('Q') <= n/4 && mp.get('W') <= n/4 && mp.get('E') <= n/4 && mp.get('R') <= n/4)
+            {
+                minl = Math.min(minl, r-l+1);
+                mp.merge(s.charAt(l), 1, Integer::sum);
+                l++;
+            }
+            r++;
+        }
+        return minl;
+    }
+}
+```
