--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -21,7 +21,7 @@ while(end < n){ //外层循环扩展右边界，内层循环扩展左边界
 ### 注意事项
 1. 整形无穷大用Integer.MAX_VALUE，类似的无穷小为Integer.MIN_VALUE  
 2. 采用集合Set<Character> set = new HashSet<Character>()来记录是否出现过，add()添加，remove()去除，contains()用于判断是否存在
-3. 采用Map<xx, xx> map = new HashMap<xx, xx>()来记录出现过的次数。map.merge(nums[end], 1, Integer::sum)这行代码的完整含义是：在map中查找键为nums[end]的元素。如果找到了，就将该键对应的值与1相加。如果没有找到，就将键nums[end]和值1添加到map中。同理用-1代替1可用于减法。get()用于获取指定 key 对应对 value。
+3. 采用Map<xx, xx> map = new HashMap<xx, xx>()来记录出现过的次数。map.merge(nums[end], 1, Integer::sum)这行代码的完整含义是：在map中查找键为nums[end]的元素。如果找到了，就将该键对应的值与1相加。如果没有找到，就将键nums[end]和值1添加到map中。同理用-1代替1可用于减法。get()用于获取指定 key 对应对 value。（HashMap可以用数组来模拟，大幅提升运算效率）
 
 ## [1.长度最小的子数组](https://leetcode.cn/problems/minimum-size-subarray-sum/description/)
 思路：定义两个指针，分别代表滑动窗口的左右指针，初始值都为0。外层while循环，右指针从左到右遍历，内层循环则根据控制条件，左指针向右便遍历。  
