--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -319,3 +319,52 @@ class Solution {
     }
 }
 ```
+
+## [11.最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/description/)
+思路：滑动窗口，虽然存在双重循环，但时间复杂度为并不是O(n^2)，而是O(C·n)，其中C是一个常数。因为这里内层循环遍历的是52个大小写字母，是固定的常数。
+代码：
+```
+class Solution {
+    public String minWindow(String s, String t) {
+        int[] hashS = new int[128];
+        int[] hashT = new int[128];
+        for(int i = 0; i < t.length(); i++)
+            hashT[t.charAt(i)]++;
+        int l = 0;
+        int r = 0;
+        int minl = Integer.MAX_VALUE;
+        String ans = "";
+        while(r < s.length())
+        {
+            hashS[s.charAt(r)]++;
+            while(l <= r && isCover(hashS, hashT))
+            {
+                if(r-l+1 < minl)
+                {
+                    minl = r-l+1;
+                    ans = s.substring(l, r+1);
+                }
+                hashS[s.charAt(l)]--;
+                l++;
+            }
+            r++;
+        }
+        return ans;
+    }   
+
+    public boolean isCover(int[] hashS, int[] hashT)
+    {
+        for(int i = 'a'; i < 'a' + 26; i++)
+        {
+            if(hashS[i] < hashT[i])
+                return false;
+        }
+        for(int i = 'A'; i < 'A' + 26; i++)
+        {
+            if(hashS[i] < hashT[i])
+                return false;
+        }
+        return true;
+    }
+}
+```
