--- a/二分查找.md
+++ b/二分查找.md
@@ -1,1 +1,27 @@
+# 代表性题目
 
+### 模板代码
+```
+// lowerBound 返回最小的满足 nums[i] >= target 的 i
+// 如果数组为空，或者所有数都 < target，则返回 nums.length
+// 要求 nums 是非递减的，即 nums[i] <= nums[i + 1]
+
+// 闭区间写法
+// 区间的定义: 表示我们需要知道这个区间内的元素和target的关系 ！！！！！！
+private int lowerBound(int[] nums, int target) {
+    int left = 0, right = nums.length - 1; // 闭区间 [left, right]
+    while (left <= right) { // 区间不为空
+        int mid = left + (right - left) / 2; //防止加法溢出 ！！！！！！
+        if (nums[mid] < target) {
+            left = mid + 1; // 范围缩小到 [mid+1, right]
+        } else {
+            right = mid - 1; // 范围缩小到 [left, mid-1]
+        }
+    }
+    return left;
+}
+```
+
+
+### 注意事项
+1. 
