--- a/二分查找.md
+++ b/二分查找.md
@@ -24,4 +24,5 @@ private int lowerBound(int[] nums, int target) {
 
 
 ### 注意事项
-1. 
+1. 上述模板代码 lowerBound 返回的是最小的满足 nums[i] >= target 的 i（属于 >= 的情况）
+2. 对于 >, <=, < 的其他三种情况，可以转换一下。比如 > target 可以转换为 >= target，以此类推。
