--- a/二分查找.md
+++ b/二分查找.md
@@ -26,3 +26,34 @@ private int lowerBound(int[] nums, int target) {
 ### 注意事项
 1. 上述模板代码 lowerBound 返回的是最小的满足 nums[i] >= target 的 i（属于 >= 的情况）
 2. 对于 >, <=, < 的其他三种情况，可以转换一下。比如 > target 可以转换为 >= target，以此类推。
+
+## [1.在排序数组中查找元素的第一个和最后一个位置](https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/description/)
+思路：属于 >= 和 > 的情况  
+代码：
+```
+class Solution {
+    public int[] searchRange(int[] nums, int target) {
+        int ans1 = lower_bound(nums, target);
+        if(ans1 == nums.length || nums[ans1] != target)
+            return new int[]{-1, -1};
+        
+        int ans2 = lower_bound(nums, target + 1) - 1;
+        return new int[]{ans1, ans2};
+    }
+
+    public int lower_bound(int[] nums, int target)
+    {
+        int l = 0;
+        int r = nums.length - 1;
+        while(l <= r)
+        {
+            int mid = l + (r - l) / 2;
+            if(nums[mid] < target)
+                l = mid + 1;
+            else
+                r = mid - 1;
+        }
+        return l;
+    }
+}
+```
