--- a/二分查找.md
+++ b/二分查找.md
@@ -57,3 +57,31 @@ class Solution {
     }
 }
 ```
+
+## [2.正整数和负整数的最大计数](https://leetcode.cn/problems/maximum-count-of-positive-integer-and-negative-integer/description/)
+思路：分别统计正整数和负整数的个数
+代码：
+```
+class Solution {
+    public int maximumCount(int[] nums) {
+        int ans1 = lower_bound(nums, 0) - 0; //负整数个数
+        int ans2 = nums.length - lower_bound(nums, 1); //正整数个数
+        return Math.max(ans1, ans2);
+    }
+
+    public int lower_bound(int[] nums, int target)
+    {
+        int l = 0;
+        int r = nums.length - 1;
+        while(l <= r)
+        {
+            int mid = l + (r - l) / 2;
+            if(nums[mid] < target)
+                l = mid + 1;
+            else
+                r = mid - 1;
+        }
+        return l;
+    }
+}
+```
