--- a/二分查找.md
+++ b/二分查找.md
@@ -85,3 +85,40 @@ class Solution {
     }
 }
 ```
+
+## [3.统计公平数对的数目](https://leetcode.cn/problems/count-the-number-of-fair-pairs/description/)
+思路：自定义初始区间的二分查找 + [left, right)区间的元素个数 = right-left  
+代码：
+```
+class Solution {
+    public long countFairPairs(int[] nums, int lower, int upper) {
+        Arrays.sort(nums);
+        int n = nums.length;
+        long ans = 0;
+        for(int i = 0; i < nums.length; i++)
+        {
+            long target1 = lower - nums[i];
+            int ans1 = lower_bound(nums, target1, i+1, n-1);
+            long target2 = upper - nums[i] + 1;
+            int ans2 = lower_bound(nums, target2, i+1, n-1);
+            ans += ans2 - ans1;
+        }
+        return ans;
+    }
+
+    public int lower_bound(int[] nums, long target, int left, int right)
+    {
+        int l = left;
+        int r = right;
+        while(l <= r)
+        {
+            int mid = l + (r - l) / 2;
+            if(nums[mid] < target)
+                l = mid + 1;
+            else
+                r = mid - 1;
+        }
+        return l;
+    }
+}
+```
