--- a/二分查找.md
+++ b/二分查找.md
@@ -122,3 +122,45 @@ class Solution {
     }
 }
 ```
+
+## [4.区间内查询数字的频率](https://leetcode.cn/problems/range-frequency-queries/description/)
+思路：用一个HashMap存放各个元素所出现的所有下标，下标是排好序的，可以直接二分查找。包含HashMap做题所需常用的操作，不容易忘记！！！  
+代码：
+```
+class RangeFreqQuery {
+
+    private Map<Integer, List<Integer>> mp = new HashMap<>();
+
+    public RangeFreqQuery(int[] arr) {
+        for(int i = 0; i < arr.length; i++)
+        {
+            if(mp.get(arr[i]) == null)
+                mp.put(arr[i], new ArrayList<>());
+            mp.get(arr[i]).add(i);
+        }
+    }
+    
+    public int query(int left, int right, int value) {
+        if(mp.get(value) == null)
+            return 0;
+        int ans1 = lower_bound(mp.get(value), left);
+        int ans2 = lower_bound(mp.get(value), right + 1);
+        return ans2 - ans1;
+    }
+
+    public int lower_bound(List<Integer> nums, int target)
+    {
+        int l = 0;
+        int r = nums.size() - 1;
+        while(l <= r)
+        {
+            int mid = l + (r-l) / 2;
+            if(nums.get(mid) < target)
+                l = mid + 1;
+            else
+                r = mid - 1;
+        }
+        return l;
+    }   
+}
+```
