--- a/二分查找.md
+++ b/二分查找.md
@@ -164,3 +164,25 @@ class RangeFreqQuery {
     }   
 }
 ```
+
+## [5.H 指数 II](https://leetcode.cn/problems/h-index-ii/description/)
+思路：最后的答案肯定是[ans:]区间内的论文，所以思路就是去寻找这个ans。  
+代码：
+```
+class Solution {
+    public int hIndex(int[] citations) {
+        int n = citations.length;
+        int left = 0;
+        int right = n - 1;
+        while(left <= right)
+        {
+            int mid = left + (right - left) / 2;
+            if(citations[mid] < n - mid)
+                left = mid + 1;
+            else
+                right = mid - 1;
+        }
+        return n - left;
+    }
+}
+```
