--- a/二分查找.md
+++ b/二分查找.md
@@ -186,3 +186,20 @@ class Solution {
     }
 }
 ```
+
+### 二分答案模板代码
+```
+// 闭区间写法
+private int lowerBound(int[] nums, int target) {
+    int left = x, right = y; // x到y为可能的答案
+    while (left <= right) { 
+        int mid = left + (right - left) / 2; //防止加法溢出 ！！！！！！
+        if (!check) {  //检查条件，若不满足
+            left = mid + 1; 
+        } else {  //条件满足
+            right = mid - 1; 
+        }
+    }
+    return left;  //返回满足条件的最小值
+}
+```
