--- a/二分查找.md
+++ b/二分查找.md
@@ -194,7 +194,7 @@ private int lowerBound(int[] nums, int target) {
     int left = x, right = y; // x到y为可能的答案
     while (left <= right) { 
         int mid = left + (right - left) / 2; //防止加法溢出 ！！！！！！
-        if (!check) {  //检查条件，若不满足
+        if (!check(mid)) {  //检查条件，若不满足
             left = mid + 1; 
         } else {  //条件满足
             right = mid - 1; 
