--- a/二分查找.md
+++ b/二分查找.md
@@ -203,3 +203,38 @@ private int lowerBound(int[] nums, int target) {
     return left;  //返回满足条件的最小值
 }
 ```
+
+## [6.爱吃香蕉的珂珂](https://leetcode.cn/problems/koko-eating-bananas/description/)
+思路：属于二分答案题目。  
+代码：
+```
+class Solution {
+    public int minEatingSpeed(int[] piles, int h) {
+        Arrays.sort(piles);
+        int left = 1;
+        int right = piles[piles.length - 1];
+        while(left <= right)
+        {
+            int mid = left + (right - left) / 2;
+            if(!check(piles, mid, h)) //不满足条件
+                left = mid + 1;
+            else       //满足条件
+                right = mid - 1;
+        }
+        return left;
+    }
+
+    public boolean check(int[] nums, int eat, int h)
+    {
+        int ans = 0;
+        for(int i = 0; i < nums.length; i++)
+        {
+            ans += Math.ceil(1.0 * nums[i] / eat);
+        }
+        if(ans > h)
+            return false;
+        else
+            return true;
+    }
+}
+```
