--- a/二分查找.md
+++ b/二分查找.md
@@ -1,6 +1,6 @@
 # 代表性题目
 
-### 模板代码
+### 二分查找模板代码
 ```
 // lowerBound 返回最小的满足 nums[i] >= target 的 i
 // 如果数组为空，或者所有数都 < target，则返回 nums.length
@@ -26,6 +26,23 @@ private int lowerBound(int[] nums, int target) {
 ### 注意事项
 1. 上述模板代码 lowerBound 返回的是最小的满足 nums[i] >= target 的 i（属于 >= 的情况）
 2. 对于 >, <=, < 的其他三种情况，可以转换一下。比如 > target 可以转换为 >= target，以此类推。
+
+### 二分答案模板代码
+```
+// 闭区间写法
+private int lowerBound(int[] nums, int target) {
+    int left = x, right = y; // x到y为可能的答案
+    while (left <= right) { 
+        int mid = left + (right - left) / 2; //防止加法溢出 ！！！！！！
+        if (!check(mid)) {  //检查条件，若不满足
+            left = mid + 1; 
+        } else {  //条件满足
+            right = mid - 1; 
+        }
+    }
+    return left;  //返回满足条件的最小值
+}
+```
 
 ## [1.在排序数组中查找元素的第一个和最后一个位置](https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/description/)
 思路：属于 >= 和 > 的情况  
@@ -184,23 +201,6 @@ class Solution {
         }
         return n - left;
     }
-}
-```
-
-### 二分答案模板代码
-```
-// 闭区间写法
-private int lowerBound(int[] nums, int target) {
-    int left = x, right = y; // x到y为可能的答案
-    while (left <= right) { 
-        int mid = left + (right - left) / 2; //防止加法溢出 ！！！！！！
-        if (!check(mid)) {  //检查条件，若不满足
-            left = mid + 1; 
-        } else {  //条件满足
-            right = mid - 1; 
-        }
-    }
-    return left;  //返回满足条件的最小值
 }
 ```
 
