--- a/二分查找.md
+++ b/二分查找.md
@@ -238,3 +238,41 @@ class Solution {
     }
 }
 ```
+
+## [7.完成旅途的最少时间](https://leetcode.cn/problems/minimum-time-to-complete-trips/description/)
+思路：属于二分答案题目。  
+代码：
+```
+class Solution {
+    public long minimumTime(int[] time, int totalTrips) {
+        long left = 1;
+        //long right = (long)1e14; //为了节省时间可以用下面操作
+        long min = (long)1e7;
+        for(int i = 0; i < time.length; i++)
+            min = Math.min(time[i], min);
+        long right = min * totalTrips;
+        while(left <= right)
+        {
+            long mid = left + (right - left) / 2;
+            if(!check(time, totalTrips, mid))
+                left = mid + 1;
+            else
+                right = mid - 1;
+        }
+        return left;
+    }
+
+    public boolean check(int[] time, int totalTrips, long totalTime)
+    {
+        long trips = 0;
+        for(int i = 0; i < time.length; i++)
+        {
+            trips += totalTime / time[i];
+        }
+        if(trips < totalTrips)
+            return false;
+        else
+            return true;
+    }
+}
+```
