--- a/二分查找.md
+++ b/二分查找.md
@@ -210,9 +210,11 @@ class Solution {
 ```
 class Solution {
     public int minEatingSpeed(int[] piles, int h) {
-        Arrays.sort(piles);
         int left = 1;
-        int right = piles[piles.length - 1];
+        int max = Integer.MIN_VALUE;
+        for(int i = 0; i < piles.length; i++)
+            max = Math.max(max, piles[i]);
+        int right = max;
         while(left <= right)
         {
             int mid = left + (right - left) / 2;
