--- a/二分查找.md
+++ b/二分查找.md
@@ -205,7 +205,7 @@ class Solution {
 ```
 
 ## [6.爱吃香蕉的珂珂](https://leetcode.cn/problems/koko-eating-bananas/description/)
-思路：属于二分答案题目。  
+思路：属于二分答案题目。check函数的设计应该和>=的意义相同！！！！    
 代码：
 ```
 class Solution {
@@ -242,7 +242,7 @@ class Solution {
 ```
 
 ## [7.完成旅途的最少时间](https://leetcode.cn/problems/minimum-time-to-complete-trips/description/)
-思路：属于二分答案题目。  
+思路：属于二分答案题目。check函数的设计应该和>=的意义相同！！！！    
 代码：
 ```
 class Solution {
@@ -275,6 +275,52 @@ class Solution {
             return false;
         else
             return true;
+    }
+}
+```
+
+## [8.最大合金数](https://leetcode.cn/problems/maximum-number-of-alloys/description/)
+思路：属于二分答案题目。check函数的设计应该和>=的意义相同！！！！  
+代码：
+```
+class Solution {
+    public int maxNumberOfAlloys(int n, int k, int budget, List<List<Integer>> composition, List<Integer> stock, List<Integer> cost) {
+        //二分答案，合金数
+        int left = 1;
+        //求上界
+        int right = Integer.MAX_VALUE;
+        for(int i = 0; i < stock.size(); i++)
+            right = Math.min(stock.get(i), right);
+        right = right + budget;
+        while(left <= right)
+        {
+            int mid = left + (right - left) / 2;
+            if(!check(mid, n, k, budget, composition, stock, cost))
+                left = mid + 1;
+            else
+                right = mid - 1;
+        }
+        return left - 1;
+    }
+
+    public boolean check(int num, int n, int k, int budget, List<List<Integer>> composition, List<Integer> stock, List<Integer> cost)
+    {
+        long min_money = Long.MAX_VALUE;
+        for(int i = 0; i < k; i++)
+        {
+            long money = 0;
+            for(int j = 0; j < n; j++)
+            {
+                long t = (long)composition.get(i).get(j) * num;
+                if(t > stock.get(j))
+                    money += (t - stock.get(j)) * cost.get(j);
+            }
+            min_money = Math.min(min_money, money);
+        }
+        if(min_money > budget)
+            return true;
+        else
+            return false;
     }
 }
 ```
