--- a/二分查找.md
+++ b/二分查找.md
@@ -324,3 +324,42 @@ class Solution {
     }
 }
 ```
+
+## [9.最小化数组中的最大值](https://leetcode.cn/problems/minimize-maximum-of-array/description/)
+思路：属于二分答案题目。每次二进制搜索迭代时，都会反向遍历数组，贪婪地递减当前元素，直到其在限制范围内，这里check函数处理数组时，不能修改nums数组，否则答案会出错。  
+代码：
+```
+class Solution {
+    public int minimizeArrayValue(int[] nums) {
+        int max = 0;
+        for(int i = 0; i < nums.length; i++)
+        {
+            max = Math.max(max, nums[i]);
+        }
+        int l = 0;
+        int r = max;
+        while(l <= r)
+        {
+            int mid = l + (r - l) / 2;
+            if(!check(nums, mid))
+                l = mid + 1;
+            else
+                r = mid - 1;
+        }
+        return l;
+    }
+
+    public boolean check(int[] nums, int max)
+    {
+        long temp = nums[nums.length-1]; //表示当前索引i的值
+        for(int i = nums.length-1; i > 0; i--)
+        {
+            temp = nums[i-1] + Math.max(temp - max, 0);
+        }
+        if(temp <= max)
+            return true;
+        else
+            return false;
+    }
+}
+```
