--- a/二分查找.md
+++ b/二分查找.md
@@ -363,3 +363,43 @@ class Solution {
     }
 }
 ```
+
+## [10.礼盒的最大甜蜜度](https://leetcode.cn/problems/maximum-tastiness-of-candy-basket/description/)
+思路：属于二分答案题目。在假设一个甜蜜度 mid 后，在排好序的 price 中找 k 种糖果时，需要用到贪心的算法。即从小到大遍历 price 的元素，如果当前糖果的价格比上一个选中的糖果的价格的差大于 mid，则选中当前糖果，否则继续考察下一个糖果。 
+代码：
+```
+class Solution {
+    public int maximumTastiness(int[] price, int k) {
+        Arrays.sort(price);
+        int l = 0;
+        int r = price[price.length-1] - price[0];
+        while(l <= r)
+        {
+            int mid = l + (r - l) / 2;
+            if(!check(price, k, mid))
+                l = mid + 1;
+            else
+                r = mid - 1;
+        }
+        return l - 1;
+    }
+
+    public boolean check(int[] price, int k, int x)
+    {
+        int num = 1;
+        int prev = price[0];
+        for(int i = 1; i < price.length; i++)
+        {
+            if(price[i] - prev >= x)
+            {
+                num++;
+                prev = price[i];
+            }
+        }
+        if(num < k)
+            return true;
+        else
+            return false;
+    }
+}
+```
