--- a/二分查找.md
+++ b/二分查找.md
@@ -403,3 +403,25 @@ class Solution {
     }
 }
 ```
+
+## [11.寻找旋转排序数组中的最小值](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/)
+思路：采用灵神闭区间思想，以数组最后一个元素nums[n-1]为基准，探索[0,n-2]区间和nums[n-1]的关系。  
+代码：
+```
+class Solution {
+    public int findMin(int[] nums) {
+        int n = nums.length;
+        int l = 0;
+        int r = n - 2;
+        while(l <= r)
+        {
+            int mid = l + (r - l) / 2;
+            if(nums[mid] < nums[n-1])
+                r = mid - 1;
+            else
+                l = mid + 1;
+        }
+        return nums[l];
+    }
+}
+```
