--- a/二分查找.md
+++ b/二分查找.md
@@ -425,3 +425,54 @@ class Solution {
     }
 }
 ```
+
+## [12.搜索旋转排序数组](https://leetcode.cn/problems/search-in-rotated-sorted-array/description/)
+思路：采用上一题思想，先求出最小值的下标。然后分类求即可。 
+代码：
+```
+class Solution {
+    public int search(int[] nums, int target) {
+        int n = nums.length;
+        //查找最小值下标
+        int l = 0;
+        int r = n - 2;
+        while(l <= r)
+        {
+            int mid = l + (r - l) / 2;
+            if(nums[mid] < nums[n-1])
+                r = mid - 1;
+            else
+                l = mid + 1;       
+        }
+        //l为最小值下标
+        if(target > nums[n-1])
+        {
+            int ans = lower_bound(nums, 0, l-1, target);
+            if(ans == l || nums[ans] != target)
+                return -1;
+            return ans;
+        }
+        else
+        {
+            int ans = lower_bound(nums, l, n-1, target);
+            if(ans == n || nums[ans] != target)
+                return -1;
+            return ans;
+        }
+    }
+
+
+    public int lower_bound(int[] nums, int l, int r, int target)
+    {
+        while(l <= r)
+        {
+            int mid = l + (r - l) / 2;
+            if(nums[mid] < target)
+                l = mid + 1;
+            else
+                r = mid - 1;
+        }
+        return l;
+    }
+}
+```
