--- a/二分查找.md
+++ b/二分查找.md
@@ -404,7 +404,31 @@ class Solution {
 }
 ```
 
-## [11.寻找旋转排序数组中的最小值](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/)
+# 二分查找 - 变形
+
+## [11.寻找峰值](https://leetcode.cn/problems/find-peak-element/description/)
+思路：[灵神视频](https://www.bilibili.com/video/BV1QK411d76w/?vd_source=1b49919c7c0227f4fcf55e85034bd317)。 红色背景表示 false，即目标峰顶左侧，蓝色背景表示 true，即目标峰顶及其右侧，通过这一定义，最右边元素一定为蓝色，所以从[0,n-2]区间开始探索。  
+代码：
+```
+class Solution {
+    public int findPeakElement(int[] nums) {
+        int n = nums.length;
+        int l = 0;
+        int r = n - 2;
+        while(l <= r)
+        {
+            int mid = l + (r - l) / 2;
+            if(nums[mid] < nums[mid+1])
+                l = mid + 1;
+            else
+                r = mid - 1;
+        }
+        return l;
+    }
+}
+```
+
+## [12.寻找旋转排序数组中的最小值](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/)
 思路：采用灵神闭区间思想，以数组最后一个元素nums[n-1]为基准，探索[0,n-2]区间和nums[n-1]的关系。  
 代码：
 ```
@@ -426,7 +450,7 @@ class Solution {
 }
 ```
 
-## [12.搜索旋转排序数组](https://leetcode.cn/problems/search-in-rotated-sorted-array/description/)
+## [13.搜索旋转排序数组](https://leetcode.cn/problems/search-in-rotated-sorted-array/description/)
 思路：采用上一题思想，先求出最小值的下标。然后分类求即可。   
 代码：
 ```
