--- a/二分查找.md
+++ b/二分查找.md
@@ -429,7 +429,7 @@ class Solution {
 ```
 
 ## [12.寻找旋转排序数组中的最小值](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/)
-思路：采用灵神闭区间思想，以数组最后一个元素nums[n-1]为基准，探索[0,n-2]区间和nums[n-1]的关系。  
+思路：红色背景表示 false，即最小值左侧，蓝色背景表示 true，即最小值及其右侧。根据这一定义，n-1必然是蓝色。    
 代码：
 ```
 class Solution {
