--- a/二分查找.md
+++ b/二分查找.md
@@ -440,10 +440,10 @@ class Solution {
         while(l <= r)
         {
             int mid = l + (r - l) / 2;
-            if(nums[mid] < nums[n-1])
-                r = mid - 1;
-            else
+            if(nums[mid] > nums[n-1])
                 l = mid + 1;
+            else
+                r = mid - 1;
         }
         return nums[l];
     }
