--- a/二分查找.md
+++ b/二分查找.md
@@ -463,10 +463,10 @@ class Solution {
         while(l <= r)
         {
             int mid = l + (r - l) / 2;
-            if(nums[mid] < nums[n-1])
-                r = mid - 1;
+            if(nums[mid] > nums[n-1])
+                l = mid + 1;
             else
-                l = mid + 1;       
+                r = mid - 1;    
         }
         //l为最小值下标
         if(target > nums[n-1])
