--- a/二分查找.md
+++ b/二分查找.md
@@ -500,3 +500,40 @@ class Solution {
     }
 }
 ```
+
+## [14.寻找峰值 II](https://leetcode.cn/problems/find-a-peak-element-ii/description/)
+思路：二分查找矩阵的行，对于该行mid，找出该行的最大值下标j，如果mat[mid][j] < mat[mid+1][j]，峰值不在该行；否则峰值在该行以及其下边，参照灵神的思路。     
+代码：
+```
+class Solution {
+    public int[] findPeakGrid(int[][] mat) {
+        int l = 0;
+        int r = mat.length - 2;
+        while(l <= r)
+        {
+            int mid = l + (r - l) / 2;
+            int j = findMaxId(mat[mid]);
+            if(mat[mid][j] < mat[mid+1][j])
+                l = mid + 1;
+            else
+                r = mid - 1;
+        }
+        return new int[] {l, findMaxId(mat[l])};
+    }
+
+    public int findMaxId(int[] nums)
+    {
+        int max = Integer.MIN_VALUE;
+        int maxid = 0;
+        for(int i = 0; i < nums.length; i++)
+        {
+            if(nums[i] > max)
+            {
+                max = nums[i];
+                maxid = i;
+            }
+        }
+        return maxid;
+    }
+}
+```
