--- a/二分查找.md
+++ b/二分查找.md
@@ -537,3 +537,27 @@ class Solution {
     }
 }
 ```
+
+## [15.寻找旋转排序数组中的最小值 II](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array-ii/description/)
+思路：参照灵神区间染色的思路。     
+代码：
+```
+class Solution {
+    public int findMin(int[] nums) {
+        int n = nums.length;
+        int l = 0;
+        int r = n - 2;
+        while(l <= r)
+        {
+            int mid = l + (r - l) / 2;
+            if(nums[mid] > nums[r+1])
+                l = mid + 1;
+            else if(nums[mid] < nums[r+1])
+                r = mid - 1;
+            else
+                r--;
+        }
+        return nums[l];
+    }
+}
+```
