Update 链表 - 反转系列.md

--- a/链表 - 反转系列.md
+++ b/链表 - 反转系列.md
@@ -19,3 +19,38 @@ class Solution {
     }
 }
 ```
+
+## [2.反转链表 II](https://leetcode.cn/problems/reverse-linked-list-ii/description/)
+思路：在链表前面加一个空节点，以解决特殊情况！！！  
+代码：
+```
+class Solution {
+    public ListNode reverseBetween(ListNode head, int left, int right) {
+        //在链表开头添加一个空节点，下标为0
+        ListNode top = new ListNode(0, head);
+        ListNode cur = top;
+        ListNode pre = null;
+        int curId = 0;  //表示cur指针当前的下标
+        while(curId != left) //找到cur指针指向left元素
+        {
+            pre = cur;
+            cur = cur.next;
+            curId++;
+        }
+        ListNode leftPre = pre; //记录left元素的上一元素 leftPre.next指向left元素
+        pre = null; 
+        while(curId <= right) //反转[left,right]
+        {
+            ListNode nxt = cur.next;
+            cur.next = pre;
+            pre = cur;
+            cur = nxt;
+            curId++;
+        }  //[left,right]反转结束后，pre指向right元素，cur指向right下一元素
+        //将[left,right]重新拼接到原始链表。
+        leftPre.next.next = cur;
+        leftPre.next = pre;
+        return top.next;
+    }
+}
+```
