Update 链表 - 反转系列.md

--- a/链表 - 反转系列.md
+++ b/链表 - 反转系列.md
@@ -54,3 +54,40 @@ class Solution {
     }
 }
 ```
+
+## [3,K 个一组翻转链表](https://leetcode.cn/problems/reverse-nodes-in-k-group/description/)
+思路：在链表前面加一个空节点，思路和上一题类似。
+代码：
+```
+class Solution {
+    public ListNode reverseKGroup(ListNode head, int k) {
+        ListNode cur = head;
+        int n = 0;
+        while(cur != null) //统计一共有多少个节点
+        {
+            n++;
+            cur = cur.next;
+        }
+        //链表头添加一个空节点，下标为0。
+        ListNode top = new ListNode(0, head); 
+        cur = head;
+        ListNode pre = null;
+        ListNode leftPre = top;
+        for(int i = 0; i < n / k; i++) //总共需要反转n/k段
+        {
+            for(int j = 0; j < k; j++) //每一段反转k个节点
+            {
+                ListNode nxt = cur.next;
+                cur.next = pre;
+                pre = cur;
+                cur = nxt;
+            }
+            leftPre.next.next = cur;
+            ListNode tmp = leftPre.next;
+            leftPre.next = pre;
+            leftPre = tmp;
+        }
+        return top.next;
+    }
+}
+```
