Update 链表 - 反转系列.md

--- a/链表 - 反转系列.md
+++ b/链表 - 反转系列.md
@@ -91,3 +91,35 @@ class Solution {
     }
 }
 ```
+
+## [4.两两交换链表中的节点](https://leetcode.cn/problems/swap-nodes-in-pairs/description/)
+思路：在链表前面加一个空节点，思路和上一题类似。也可以用灵神的简化代码，毕竟只有两个节点要反转。  
+代码：
+```
+class Solution {
+    public ListNode swapPairs(ListNode head) {
+        ListNode top = new ListNode(0, head);
+        ListNode cur = head;
+        ListNode pre = null;
+        ListNode p0 = top; //哨兵
+        while(cur != null && cur.next != null)
+        {
+            //两两反转
+            for(int i = 0; i < 2; i++)
+            {
+                ListNode nxt = cur.next;
+                cur.next = pre;
+                pre = cur;
+                cur = nxt;
+            }
+
+            //重新拼接反转链表
+            p0.next.next = cur;
+            ListNode tmp = p0.next;
+            p0.next = pre;
+            p0 = tmp;
+        }
+        return top.next;
+    }
+}
+```
