Update 链表 - 反转系列.md

--- a/链表 - 反转系列.md
+++ b/链表 - 反转系列.md
@@ -123,3 +123,51 @@ class Solution {
     }
 }
 ```
+
+## [5.两数相加 II](https://leetcode.cn/problems/add-two-numbers-ii/description/)
+思路：反转链表，再相加，最后再反转。重点在于两个反转链表的相加处理。    
+代码：
+```
+class Solution {
+    public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
+        ListNode rl1 = reverse(l1);
+        ListNode rl2 = reverse(l2);
+        
+        return reverse(add(rl1, rl2));
+    }
+
+    //反转链表并统计链表长度
+    public ListNode reverse(ListNode l)
+    {
+        ListNode cur = l;
+        ListNode pre = null;
+        while(cur != null)
+        {
+            ListNode nxt = cur.next;
+            cur.next = pre;
+            pre = cur;
+            cur = nxt;
+        }
+        return pre;
+    }
+
+    //两个反向链表相加
+    public ListNode add(ListNode l1, ListNode l2)
+    {
+        ListNode top = new ListNode(); //创建一个哨兵节点
+        ListNode cur = top;
+        int carry = 0;
+        while(l1 != null || l2 != null || carry != 0)
+        {
+            if(l1 != null) carry += l1.val;
+            if(l2 != null) carry += l2.val;
+            cur.next = new ListNode(carry % 10);
+            cur = cur.next;
+            carry = carry / 10;
+            if(l1 != null) l1 = l1.next;
+            if(l2 != null) l2 = l2.next;
+        }
+        return top.next;
+    }
+}
+```
