Update 链表 - 反转系列.md

--- a/链表 - 反转系列.md
+++ b/链表 - 反转系列.md
@@ -125,7 +125,7 @@ class Solution {
 ```
 
 ## [5.两数相加 II](https://leetcode.cn/problems/add-two-numbers-ii/description/)
-思路：反转链表，再相加，最后再反转。重点在于两个反转链表的相加处理。    
+思路：反转链表，再相加，最后再反转。重点在于两个反转链表的相加处理(添加一个哨兵节点)。    
 代码：
 ```
 class Solution {
