Update 链表 - 反转系列.md

--- a/链表 - 反转系列.md
+++ b/链表 - 反转系列.md
@@ -171,3 +171,44 @@ class Solution {
     }
 }
 ```
+
+## [6.翻倍以链表形式表示的数字](https://leetcode.cn/problems/double-a-number-represented-as-a-linked-list/description/)
+思路：和上一题类似。反转链表，再自我相加，最后再反转。重点在于两个反转链表的相加处理(添加一个哨兵节点)。     
+代码：
+```
+class Solution {
+    public ListNode doubleIt(ListNode head) {
+        return reverse(mul2(reverse(head)));
+    }
+
+    public ListNode reverse(ListNode l)
+    {
+        ListNode cur = l;
+        ListNode pre = null;
+        while(cur != null)
+        {
+            ListNode nxt = cur.next;
+            cur.next = pre;
+            pre = cur;
+            cur = nxt;
+        }
+        return pre;
+    }
+
+    public ListNode mul2(ListNode l)
+    {
+        ListNode top = new ListNode(0);
+        ListNode cur = top;
+        int carry = 0;
+        while(l != null || carry != 0)
+        {
+            if(l != null) carry += l.val * 2;
+            cur.next = new ListNode(carry % 10);
+            cur = cur.next;
+            carry = carry / 10;
+            if(l != null) l = l.next;
+        }
+        return top.next;
+    }
+}
+```
