Update 链表 - 快慢指针.md

--- a/链表 - 快慢指针.md
+++ b/链表 - 快慢指针.md
@@ -1,1 +1,19 @@
+# 代表性题目
 
+## [1.链表的中间结点](https://leetcode.cn/problems/middle-of-the-linked-list/description/)
+思路：快慢指针经典模板。使用两个指针fast和slow，fast一次走两步，slow一次走一步，当fast指向null或者fast.next指向null时，slow刚好指向中间节点。  
+代码：
+```
+class Solution {
+    public ListNode middleNode(ListNode head) {
+        ListNode slow = head;
+        ListNode fast = head;
+        while(fast != null && fast.next != null)
+        {
+            slow = slow.next;
+            fast = fast.next.next;
+        }
+        return slow;
+    }
+}
+```
