Update 链表 - 快慢指针.md

--- a/链表 - 快慢指针.md
+++ b/链表 - 快慢指针.md
@@ -17,3 +17,22 @@ class Solution {
     }
 }
 ```
+
+## [2.环形链表](https://leetcode.cn/problems/linked-list-cycle/description/)
+思路：快慢指针判断是否存在环。若fast指针达到结尾（使用模板判断，因为fast一次走两步），则不存在环。若存在环，则fast肯定会追上slow指针。    
+代码：
+```
+public class Solution {
+    public boolean hasCycle(ListNode head) {
+        ListNode fast = head, slow = head;
+        while(fast != null && fast.next != null)
+        {
+            slow = slow.next;
+            fast = fast.next.next;
+            if(slow == fast)
+                return true;
+        }
+        return false;
+    }
+}
+```
