Update 链表 - 快慢指针.md

--- a/链表 - 快慢指针.md
+++ b/链表 - 快慢指针.md
@@ -36,3 +36,33 @@ public class Solution {
     }
 }
 ```
+
+## [3.环形链表 II](https://leetcode.cn/problems/linked-list-cycle-ii/)
+思路：
+![image](https://github.com/user-attachments/assets/4af5834a-f78d-4eec-a66f-979847bb3022)
+![image](https://github.com/user-attachments/assets/732720b3-6468-4103-9552-1414b62fd844)
+
+代码：
+```
+public class Solution {
+    public ListNode detectCycle(ListNode head) {
+        ListNode slow = head, fast = head;
+        while(fast != null && fast.next != null)
+        {
+            slow = slow.next;
+            fast = fast.next.next;
+            if(fast == slow) //存在环
+            {
+                while(head != slow)
+                {
+                    head = head.next;
+                    slow = slow.next;
+                }
+                return slow;
+            }
+        }
+        //不存在环
+        return null;
+    }
+}
+```
