Update 链表 - 快慢指针.md

--- a/链表 - 快慢指针.md
+++ b/链表 - 快慢指针.md
@@ -66,3 +66,46 @@ public class Solution {
     }
 }
 ```
+
+## [4.重排链表](https://leetcode.cn/problems/reorder-list/description/)
+思路：先快慢指针找出中间节点，得到右边链表。然后反转右边链表，并和左边链表合并。    
+代码：
+```
+class Solution {
+    public void reorderList(ListNode head) {
+        //快慢指针找出中间节点，得到右边链表
+        ListNode fast = head, slow = head;
+        while(fast != null && fast.next != null)
+        {
+            slow = slow.next;
+            fast = fast.next.next;
+        }
+        //反转右边链表，并和左边链表合并
+        ListNode head1 = head;
+        ListNode head2 = reverse(slow);
+        while(head2.next != null)
+        {
+            ListNode nxt1 = head1.next;
+            head1.next = head2;
+            head1 = nxt1;
+            ListNode nxt2 = head2.next;
+            head2.next = head1;
+            head2 = nxt2;
+        }
+    }
+
+    public ListNode reverse(ListNode l)
+    {
+        ListNode cur = l;
+        ListNode pre = null;
+        while(cur != null)
+        {
+            ListNode nxt = cur.next;
+            cur.next = pre;
+            pre = cur;
+            cur = nxt;
+        }
+        return pre;
+    }
+}
+```
