Update 链表 - 删除系列.md

--- a/链表 - 删除系列.md
+++ b/链表 - 删除系列.md
@@ -1,1 +1,13 @@
+# 代表性题目
 
+## [1.删除链表中的节点](https://leetcode.cn/problems/delete-node-in-a-linked-list/description/)
+思路：脑筋急转弯。    
+代码：
+```
+class Solution {
+    public void deleteNode(ListNode node) {
+        node.val = node.next.val;
+        node.next = node.next.next;
+    }
+}
+```
