--- a/链表 - 删除系列.md
+++ b/链表 - 删除系列.md
@@ -11,3 +11,28 @@ class Solution {
     }
 }
 ```
+
+## [2.删除链表的倒数第 N 个结点](https://leetcode.cn/problems/remove-nth-node-from-end-of-list/description/)
+思路：使用前后指针left和right。right指针先走n步，然后left指针和right指针同时走，距离始终为n，直到right指针指向最后一个节点，则left指针指向倒数第n+1个节点，删除倒数第n个节点。      
+代码：
+```
+class Solution {
+    public ListNode removeNthFromEnd(ListNode head, int n) {
+        ListNode top = new ListNode(0, head);// 由于可能会删除链表头部，用哨兵节点简化代码
+        ListNode left = top, right = top;
+        //right指针先走n步
+        for(int i = 0; i < n; i++)
+            right = right.next;
+        //此时left指针和right指针同时走，距离始终为n
+        //直到right指针指向最后一个节点，则left指针指向倒数第n+1个节点
+        while(right.next != null)
+        {
+            left = left.next;
+            right = right.next;
+        }
+        //删除倒数第n个节点
+        left.next = left.next.next;
+        return top.next;
+    }
+}
+```
