--- a/链表 - 删除系列.md
+++ b/链表 - 删除系列.md
@@ -36,3 +36,24 @@ class Solution {
     }
 }
 ```
+
+## [3.删除排序链表中的重复元素](https://leetcode.cn/problems/remove-duplicates-from-sorted-list/description/)
+思路：不会删除链表头部，则一般不用哨兵节点。    
+代码：
+```
+class Solution {
+    public ListNode deleteDuplicates(ListNode head) {
+        if(head == null)
+            return head;
+        ListNode cur = head;
+        while(cur.next != null)
+        {
+            if(cur.val == cur.next.val)
+                cur.next = cur.next.next;
+            else
+                cur = cur.next;
+        }
+        return head;
+    }
+}
+```
