--- a/链表 - 删除系列.md
+++ b/链表 - 删除系列.md
@@ -57,3 +57,29 @@ class Solution {
     }
 }
 ```
+
+## [4.删除排序链表中的重复元素 II](https://leetcode.cn/problems/remove-duplicates-from-sorted-list-ii/description/)
+思路：看代码思路。    
+代码：
+```
+class Solution {
+    public ListNode deleteDuplicates(ListNode head) {
+        ListNode top = new ListNode(-101, head);
+        ListNode cur = top; //前缀节点
+        while(cur.next != null && cur.next.next != null) //cur指针后存在两个节点
+        {
+            int val = cur.next.val;
+            if(cur.next.next.val == val) //包含val的值都得删除
+            {
+                while(cur.next != null && cur.next.val == val)
+                    cur.next = cur.next.next;
+            }
+            else //更换前缀节点
+            {
+                cur = cur.next;
+            }
+        }
+        return top.next;
+    }
+}
+```
