Update 链表 - 删除系列.md

--- a/链表 - 删除系列.md
+++ b/链表 - 删除系列.md
@@ -59,7 +59,7 @@ class Solution {
 ```
 
 ## [4.删除排序链表中的重复元素 II](https://leetcode.cn/problems/remove-duplicates-from-sorted-list-ii/description/)
-思路：看代码思路。    
+思路：一般来说如果要修改/删除头节点的话，加个哨兵节点会更加方便。看代码思路。    
 代码：
 ```
 class Solution {
