--- a/链表 - 删除系列.md
+++ b/链表 - 删除系列.md
@@ -83,3 +83,23 @@ class Solution {
     }
 }
 ```
+
+## [5.移除链表元素](https://leetcode.cn/problems/remove-linked-list-elements/)
+思路：经典删除节点题目。     
+代码：
+```
+class Solution {
+    public ListNode removeElements(ListNode head, int val) {
+        ListNode top = new ListNode(0, head);
+        ListNode cur = top; //前缀节点
+        while(cur.next != null)
+        {
+            if(cur.next.val == val)
+                cur.next = cur.next.next;
+            else
+                cur = cur.next;
+        }
+        return top.next;
+    }
+}
+```
