Update 链表 - 删除系列.md

--- a/链表 - 删除系列.md
+++ b/链表 - 删除系列.md
@@ -103,3 +103,26 @@ class Solution {
     }
 }
 ```
+
+## [6.从链表中移除在数组中存在的节点](https://leetcode.cn/problems/delete-nodes-from-linked-list-present-in-array/)
+思路：和上一题思路一样。数组可以替换为hahset。       
+代码：
+```
+class Solution {
+    public ListNode modifiedList(int[] nums, ListNode head) {
+        int[] hashmp = new int[100001];
+        for(int i : nums)
+            hashmp[i] = 1;
+        ListNode top = new ListNode(0, head);
+        ListNode cur = top; //前缀节点
+        while(cur.next != null)
+        {
+            if(hashmp[cur.next.val] == 1)
+                cur.next = cur.next.next;
+            else
+                cur = cur.next;
+        }
+        return top.next;
+    }
+}
+```
