Update 链表 - 删除系列.md

--- a/链表 - 删除系列.md
+++ b/链表 - 删除系列.md
@@ -126,3 +126,38 @@ class Solution {
     }
 }
 ```
+
+## [7.从链表中移除节点](https://leetcode.cn/problems/remove-nodes-from-linked-list/description/)
+思路：反转链表，从右到左依次遍历，删除不符合要求的节点，最后再反转。       
+代码：
+```
+class Solution {
+    public ListNode removeNodes(ListNode head) {
+        //反转链表
+        head = reverse(head);
+        ListNode cur = head; //cur指向当前右侧最大值
+        while(cur.next != null)
+        {
+            if(cur.next.val < cur.val)
+                cur.next = cur.next.next;
+            else
+                cur = cur.next;
+        }
+        return reverse(head);
+    }
+
+    public ListNode reverse(ListNode l)
+    {
+        ListNode pre = null;
+        ListNode cur = l;
+        while(cur != null)
+        {
+            ListNode nxt = cur.next;
+            cur.next = pre;
+            pre = cur;
+            cur = nxt;
+        }
+        return pre;
+    }
+}
+```
