Update 二叉树与递归 - 深入理解.md

--- a/二叉树与递归 - 深入理解.md
+++ b/二叉树与递归 - 深入理解.md
@@ -1,6 +1,8 @@
 # 代表性题目
 
 ## [1.二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/description/)
+
+### 方法一（自底向上）
 思路：经典题目。整个树的深度 = max(左子树深度，右子树深度) + 1    
 代码：
 ```
@@ -9,6 +11,30 @@ class Solution {
         if(root == null)
             return 0;
         return Math.max(maxDepth(root.left), maxDepth(root.right)) + 1;
+    }
+}
+```
+
+### 方法二（自顶向下）
+思路：dfs经典模板。      
+代码：
+```
+class Solution {
+    public int maxDep = 0; //全局变量
+
+    public int maxDepth(TreeNode root) {
+        dfs(root, 1);
+        return maxDep;
+    }
+
+    public void dfs(TreeNode root, int depth)
+    {
+        if(root == null) //结束条件
+            return;
+        maxDep = Math.max(depth, maxDep);
+        //依次遍历当前节点的子节点
+        dfs(root.left, depth + 1);
+        dfs(root.right, depth + 1);
     }
 }
 ```
