--- a/二叉树与递归 - 深入理解.md
+++ b/二叉树与递归 - 深入理解.md
@@ -53,3 +53,22 @@ public void dfs(TreeNode root, int depth) //depth表示当前深度
     dfs(子节点2, depth + 1);
 }
 ```
+
+## [2.二叉树的最小深度](https://leetcode.cn/problems/minimum-depth-of-binary-tree/description/)
+
+### 方法一（自底向上）
+思路：和上一题类似。      
+代码：
+```
+class Solution {
+    public int minDepth(TreeNode root) {
+        if(root == null)
+            return 0;
+        if(root.left == null && root.right != null)
+            return minDepth(root.right) + 1;
+        else if(root.left != null && root.right == null)
+            return minDepth(root.left) + 1;
+        return Math.min(minDepth(root.left), minDepth(root.right)) + 1;
+    }
+}
+```
