Update 二叉树与递归 - 深入理解.md

--- a/二叉树与递归 - 深入理解.md
+++ b/二叉树与递归 - 深入理解.md
@@ -42,15 +42,17 @@ class Solution {
 ### 注意事项
 上述两种方法都属于dfs模板。方法一是在“归”的时候返回一个值进行处理，所以自底向上；而方法二则是在“递”的时候就处理，不需要返回值，所以自顶向下。dfs模板代码（只针对树或者二叉树）如下：  
 ```
-public void dfs(TreeNode root, int depth) //depth表示当前深度
+dfs(TreeNode root, int depth) //depth表示当前节点的深度
 {
-    if(root == null) //结束条件
+    if(结束条件)
         return;
-    //处理代码（比如处理当前depth）
-    xxxxxxxxxx
+    //处理代码
+    xxxxxxxxxx（比如处理当前depth）
     //依次遍历当前节点的子节点，多个子节点一般使用for循环，二叉树就没必要。
-    dfs(子节点1, depth + 1); //深度记得加1
-    dfs(子节点2, depth + 1);
+    for循环
+    {
+        dfs(子节点i, depth + 1); //深度记得加1
+    }
 }
 ```
 
