Update 二叉树与递归 - 深入理解.md

--- a/二叉树与递归 - 深入理解.md
+++ b/二叉树与递归 - 深入理解.md
@@ -16,7 +16,7 @@ class Solution {
 ```
 
 ### 方法二（自顶向下）
-思路：dfs经典模板。      
+思路：使用dfs经典模板。      
 代码：
 ```
 class Solution {
@@ -46,12 +46,14 @@ dfs(TreeNode root, int depth) //depth表示当前节点的深度
 {
     if(结束条件)
         return;
-    //处理代码
-    xxxxxxxxxx（比如处理当前depth）
+    //自顶向下处理代码
+    xxxxxxxxxx
     //依次遍历当前节点的子节点，多个子节点一般使用for循环，二叉树就没必要。
     for循环
     {
         dfs(子节点i, depth + 1); //深度记得加1
+        //自底向上处理代码
+        xxxxxxxxxx
     }
 }
 ```
@@ -71,6 +73,32 @@ class Solution {
         else if(root.left != null && root.right == null)
             return minDepth(root.left) + 1;
         return Math.min(minDepth(root.left), minDepth(root.right)) + 1;
+    }
+}
+```
+
+### 方法二（自顶向下）
+思路：和上一题类似。      
+代码：
+```
+class Solution {
+    public int mindep = 100001;
+
+    public int minDepth(TreeNode root) {
+        if(root == null)
+            return 0;
+        dfs(root, 1);
+        return mindep;
+    }
+
+    public void dfs(TreeNode root, int depth)
+    {
+        if(root == null)
+            return;
+        if(root.left == null && root.right == null) //叶子节点
+            mindep = Math.min(mindep, depth);
+        dfs(root.left, depth+1);
+        dfs(root.right, depth+1);
     }
 }
 ```
