Update 二叉树与递归 - 深入理解.md

--- a/二叉树与递归 - 深入理解.md
+++ b/二叉树与递归 - 深入理解.md
@@ -42,7 +42,7 @@ class Solution {
 ### 注意事项
 上述两种方法都属于dfs模板。方法一是在“归”的时候返回一个值进行处理，所以自底向上；而方法二则是在“递”的时候就处理，不需要返回值，所以自顶向下。dfs模板代码（只针对树或者二叉树）如下：  
 ```
-dfs(TreeNode root, int depth) //depth表示当前节点的深度
+dfs(TreeNode root, int depth) //depth表示当前节点的深度。函数参数可以根据情况更换或者添加
 {
     if(结束条件)
         return;
