Update 二叉树与递归 - 深入理解.md

--- a/二叉树与递归 - 深入理解.md
+++ b/二叉树与递归 - 深入理解.md
@@ -104,7 +104,7 @@ class Solution {
 ```
 
 ## [3.路径总和](https://leetcode.cn/problems/path-sum/description/)
-思路：当前节点是否存在和为targetsum的路径 = 它的左子树是否存在和为targetsum - root.val 或者 它的右子树是否存在和为targetsum - root.val。      
+思路：当前节点是否存在和为targetsum的路径 = 它的左子树是否存在和为targetsum - root.val 或者 它的右子树是否存在和为targetsum - root.val。有两种方法。      
 代码：
 ```
 class Solution {
@@ -114,6 +114,36 @@ class Solution {
         if(root.left == null && root.right == null)
             return root.val == targetSum;
         return hasPathSum(root.left, targetSum - root.val) || hasPathSum(root.right, targetSum - root.val);
+    }
+}
+```
+
+## [4.求根节点到叶节点数字之和](https://leetcode.cn/problems/sum-root-to-leaf-numbers/description/)
+思路：两种方法。   
+
+### 方法一（没有返回值）      
+代码：
+```
+class Solution {
+    public int sum = 0;
+
+    public int sumNumbers(TreeNode root) {
+        dfs(root, 0);
+        return sum;
+    }
+
+    public void dfs(TreeNode root, int x)
+    {
+        if(root == null)
+            return;
+        x = x * 10 + root.val;
+        if(root.left == null && root.right == null) //叶子节点
+        {
+            sum += x;
+            return; //可加可不加
+        }
+        dfs(root.left, x);
+        dfs(root.right, x);
     }
 }
 ```
