--- a/二叉树与递归 - 深入理解.md
+++ b/二叉树与递归 - 深入理解.md
@@ -147,3 +147,23 @@ class Solution {
     }
 }
 ```
+
+### 方法二（有返回值）      
+代码：
+```
+class Solution {
+    public int sumNumbers(TreeNode root) {
+        return dfs(root, 0);
+    }
+
+    public int dfs(TreeNode root, int x)
+    {
+        if(root == null)
+            return 0;
+        x = x * 10 + root.val;
+        if(root.left == null && root.right == null)
+            return x;
+        return dfs(root.left, x) + dfs(root.right, x);
+    }
+}
+```
