Update 链表 - 快慢指针.md

--- a/链表 - 快慢指针.md
+++ b/链表 - 快慢指针.md
@@ -109,3 +109,43 @@ class Solution {
     }
 }
 ```
+
+## [5.回文链表](https://leetcode.cn/problems/palindrome-linked-list/description/)
+思路：寻找中间节点+反转链表。    
+代码：
+```
+class Solution {
+    public boolean isPalindrome(ListNode head) {
+        ListNode fast = head, slow = head;
+        while(fast != null && fast.next != null)
+        {
+            fast = fast.next.next;
+            slow = slow.next;
+        }
+        ListNode left = head;
+        ListNode right = reverse(slow);
+        while(right != null)
+        {
+            if(left.val != right.val)
+                return false;
+            left = left.next;
+            right = right.next;
+        }
+        return true;
+    }
+
+    public ListNode reverse(ListNode l)
+    {
+        ListNode pre = null;
+        ListNode cur = l;
+        while(cur != null)
+        {
+            ListNode nxt = cur.next;
+            cur.next = pre;
+            pre = cur;
+            cur = nxt;
+        }
+        return pre;
+    }
+}
+```
