--- a/二叉树与递归 - 深入理解.md
+++ b/二叉树与递归 - 深入理解.md
@@ -96,7 +96,10 @@ class Solution {
         if(root == null)
             return;
         if(root.left == null && root.right == null) //叶子节点
+        {
             mindep = Math.min(mindep, depth);
+            return; //可加可不加
+        }
         dfs(root.left, depth+1);
         dfs(root.right, depth+1);
     }
