--- a/链表 - 快慢指针.md
+++ b/链表 - 快慢指针.md
@@ -124,7 +124,7 @@ class Solution {
         }
         ListNode left = head;
         ListNode right = reverse(slow);
-        while(right != null)
+        while(right != null)  //不能用left，用left的next还指向右边链表
         {
             if(left.val != right.val)
                 return false;
