Update 二叉树与递归 - 深入理解.md

--- a/二叉树与递归 - 深入理解.md
+++ b/二叉树与递归 - 深入理解.md
@@ -170,3 +170,23 @@ class Solution {
     }
 }
 ```
+
+## [5.统计二叉树中好节点的数目](https://leetcode.cn/problems/count-good-nodes-in-binary-tree/)
+思路：树的好节点个数 = 根节点是否为好节点 + 左子树好节点个数 + 右子树好节点个数。有两种方法。      
+代码：
+```
+class Solution {
+    public int goodNodes(TreeNode root) {
+        return dfs(root, -10001);
+    }
+
+    public int dfs(TreeNode node, int max)
+    {
+        if(node == null)
+            return 0;
+        max = Math.max(node.val, max);
+        int cnt = node.val >= max? 1:0;
+        return dfs(node.left, max) + dfs(node.right, max) + cnt;
+    }
+}
+```
